# DevPulse

./: .dockerignore  .env.example  Dockerfile  README.md  dependencies.py  docker-compose.yml  main.py  pyproject.toml
Jobs/: sync_job.py
alembic/: env.py
alembic/versions/: 6f73893d12c7_create_users_and_github_activities_.py
core/: config.py  logging_config.py
database/: connect.py
error/: error_handler.py  exception.py
models/: github_activity.py  user.py
repositories/: activity_repository.py  user_repository.py
routes/: auth.py  github.py  health.py
schemas/: activity.py  auth.py
services/: activity_service.py  auth_service.py  github_service.py
test/: conftest.py  test_auth.py  test_health.py
