[project]
name = "devplus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "passlib[bcrypt,bycrypt]>=1.7.4",
    "psycopg2>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "python-multipart>=0.0.32",
    "bcrypt==4.0.1",
    "httpx>=0.28.1",
    "apscheduler>=3.11.2",
]
